--- a/css/main.scss
+++ b/css/main.scss
@@ -644,7 +644,7 @@ $baseurl: '{{ site.baseurl }}/images';
 		}
 
 		&.style1 {
-			color: _palette(accent2, bg);
+			color: #B85C80;
 		}
 
 		&.style2 {
@@ -1550,7 +1550,7 @@ $baseurl: '{{ site.baseurl }}/images';
 		}
 
 		&.style2 {
-			background-color: _palette(bg);
+			background-color: #2D4671;
 		}
 
 		&.style3 {
