--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-{% include topcomment.html %}
 <html lang="{{ site.lang }}">
 
   {% include head.html %}
@@ -14,13 +13,8 @@
         <!-- Banner -->
           <section id="banner">
             <div class="inner">
-              <h1>{{ site.title }}</h1>
+              <h1><img style="border-radius: 50%; width: 152px; height: 152px" src="{{ site.baseurl }}/images/me.jpg"/><br>{{ site.title }}</h1>
               <p>{{ site.description }}</p>
-              <!--
-              <ul class="actions">
-                <li><a href="#" class="button special">Activate</a></li>
-              </ul>
-              -->
             </div>{%
             if site.greeting %}
             <a href="#greeting" class="more scrolly">Continue</a>{%
@@ -47,7 +41,7 @@
                     endif %}" class="icon fa-envelope major style1"
                        ><span class="label">E-mail</span></a></li>{%
                   else %}
-                <li><a target="_blank" href="{{ socloc[1] }}" class="icon fa-{{ socloc[0] }} major style{% cycle 1, 2, 3 %}"
+                <li><a target="_blank" href="{{ socloc[1] }}" class="icon fa-{{ socloc[0] }} major style1"
                        ><span class="label">{{ socloc[0] }}</span></a></li>{%
                   endif %}{%
                 endif %}{%
@@ -66,7 +60,7 @@
             <section class="spotlight">
               <div class="image">
                 <a href="{{ my_page.url | prepend:site.baseurl }}">
-                <img src="{{ site.baseurl }}/images/{% if my_page.image %}{{ my_page.image }}{% else %}banner.jpg{% endif %}"
+                <img src="{{ site.baseurl }}/images/{% if my_page.display %}{{ my_page.display }}{% else %}banner.jpg{% endif %}"
                      alt="{% if my_page.image_alt %}{{ my_page.image_alt }}{% else %}Image for {{ my_page.title | escape }}{% endif %}" />
                 </a>
               </div>
@@ -83,35 +77,24 @@
             endfor %}
           </section>
 
-        <!-- Three -->{%
-      if site.tags.featured %}
+        <!-- Three -->
           <section id="landing_features" class="wrapper style3 special">
             <div class="inner">
-              <header class="major">
+              <header class="major" style="margin: 0 0 0.5em 0">
                 <h2>{{ site.features-title }}</h2>
-                <!-- <p>Blog posts with decent content</p> -->
               </header>
-              <ul class="features">{%
-                for my_post in site.posts %}{%
-                  if my_post.tags contains 'featured' %}{%
-                    assign i = i | plus:1 %}
-                <li class="icon fa-{% if my_post.icon %}{{ my_post.icon }}{% else %}heart-o{% endif %}"><!-- featured:{{ i }} -->
-                  <a href="{{ my_post.url | prepend:site.baseurl }}">
-                  <div class="container">
-                  <h3>{{ my_post.title }}</h3>
-                  <p>{{ my_post.data}}<br />{{ my_post.excerpt | strip_html | truncatewords: 16 }}</p>
+              <ul class="features">
+                <li class="style1">
+                  <a href="{{ 'works/pupdates.html' | prepend:site.baseurl }}">
+                  <div class="container" align="center">
+                    <img style="border-radius: 50%; width: 152px; height: 152px" src="{{ site.baseurl }}/images/corgi_1.gif"/>
+                    <h3 style="margin: 0 !important">Pupdates</h3><br />A dog-centric social networking app
                   </div>
                   </a>
-                </li>{%
-                    if i == 8 %}{%
-                      break %}{%
-                    endif %}{%
-                  endif %}{%
-                endfor %}
+                </li>
               </ul>
             </div>
-          </section>{%
-      endif %}
+          </section>
 
         <!-- CTA -->
           <section id="cta" class="wrapper style4">
