--- a/_sass/libs/_vars.scss
+++ b/_sass/libs/_vars.scss
@@ -89,10 +89,10 @@
 		border2-bg:			rgba(144,144,144,0.5),
 
 		accent1: (
-			bg:				#21b2a6,
+			bg:				#364353,
 			fg-bold:		#ffffff,
-			fg:				mix(#21b2a6, #ffffff, 25%),
-			fg-light:		mix(#21b2a6, #ffffff, 40%),
+			fg:				mix(#364353, #ffffff, 25%),
+			fg-light:		mix(#364353, #ffffff, 40%),
 			border:			rgba(0,0,0,0.125),
 			border-bg:		rgba(255,255,255,0.075),
 			border2:		rgba(0,0,0,0.25),
@@ -100,10 +100,10 @@
 		),
 
 		accent2: (
-			bg:				#00ffcc,
+			bg:				#B85C80,
 			fg-bold:		#ffffff,
-			fg:				mix(#00ffcc, #ffffff, 25%),
-			fg-light:		mix(#00ffcc, #ffffff, 40%),
+			fg:				mix(#B85C80, #ffffff, 25%),
+			fg-light:		mix(#B85C80, #ffffff, 40%),
 			border:			rgba(0,0,0,0.125),
 			border-bg:		rgba(255,255,255,0.075),
 			border2:		rgba(0,0,0,0.25),
@@ -111,10 +111,10 @@
 		),
 
 		accent3: (
-			bg:				#00f0ff,
+			bg:				#5585AD,
 			fg-bold:		#ffffff,
-			fg:				mix(#00f0ff, #ffffff, 25%),
-			fg-light:		mix(#00f0ff, #ffffff, 40%),
+			fg:				mix(#5585AD, #ffffff, 25%),
+			fg-light:		mix(#5585AD, #ffffff, 40%),
 			border:			rgba(0,0,0,0.125),
 			border-bg:		rgba(255,255,255,0.075),
 			border2:		rgba(0,0,0,0.25),
